landing fixes and interaction mobile and desktop

--- a/src/app/ui/navigation/nav/style.module.scss
+++ b/src/app/ui/navigation/nav/style.module.scss
@@ -8,7 +8,7 @@
     right: 0;
     top: 0;
     color: white;
-    z-index: 1;
+    z-index: 20;
     font-family: 'Outfit', serif;
     font-optical-sizing: auto;
     font-style: normal;
