--- a/src/app/ui/navigation/style.module.scss
+++ b/src/app/ui/navigation/style.module.scss
@@ -2,7 +2,7 @@
     position: fixed;
     right: 0px;
     margin: 20px;
-    z-index: 2;
+    z-index: 30;
     width: 50px;
     height: 50px;
     border-radius: 50%;
